# Roguelike-Game

./: .gitignore  CMakeLists.txt  Makefile  README.md
docs/: 4人团队完整方案.md  AI引导记录-A地图.md  AI引导记录-B战斗.md  AI引导记录-C渲染.md  AI引导记录-D游戏系统.md  开发文档.md  项目完成总结.md  项目完整性验证报告.md  项目报告_01_项目介绍.md
src/: Achievement.cpp  Achievement.h  Combat.cpp  Combat.h  Entity.cpp  Entity.h  Game.cpp  Game.h  Input.cpp  Input.h  Item.cpp  Item.h  Map.cpp  Map.h  MapObject.cpp  MapObject.h  Monster.cpp  Monster.h  Player.cpp  Player.h  Render.cpp  Render.h  Save.cpp  Save.h  Shop.cpp  Shop.h  Sound.cpp  Sound.h  config.h  main.cpp  types.h
test/: test_combat.cpp  test_game.cpp  test_map.cpp  test_render.cpp
